example/single/controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dnslb
  name: dnslb-controller-manager
  namespace: garden
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dnslb
        component: dnslb-controller-manager
    spec:
      containers:
        - name: controller-manager
          image: eu.gcr.io/gardener-project/dnslb-controller-manager-local:0.2.0-master
          imagePullPolicy: "Always"
          args:
            - --identity=GardenRing
            - --ttl=60
            - --port=8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            {}

      serviceAccountName: dnslb
      terminationGracePeriodSeconds: 120
