example/single/ing.yaml
# SPDX-FileCopyrightText: 2018 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    loadbalancer.gardener.cloud/dnsloadbalancer: test
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-port-in-redirects: "true"
  labels:
  name: echoheaders
  namespace: default
spec:
  rules:
  - host: echoheader.ingress.dnslb-test.ringdev.shoot.dev.k8s-hana.ondemand.com
    http:
      paths:
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: /
  - host: test.other.dev.k8s.ondemand.com
    http:
      paths:
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: /
